--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <div id="container">
+        <table>
+            <thead>
+                <tr>
+                    <td>Intestazione 1</td>
+                    <td>Intestazione 2</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dato 1 di 1</td>
+                    <td>Dato 1 di 2</td>
+                </tr>
+                <tr>
+                    <td>Dato 2 di 1</td>
+                    <td>Dato 2 di 2</td>
+                </tr>
+                <tr>
+                    <td>Dato 3 di 1</td>
+                    <td>Dato 3 di 2</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>tFoot 1</td>
+                    <td>tFoot 2</td>
+                </tr>
+            </tfoot>
+        </table>
+        <div>
+            <p><a href="#">Questo è un link</a></p>
+            <p><a href="#">Questo è un link</a></p>
+            <p><a href="#">Questo è un link</a></p>
+        </div>
+        <div>
+            <p>Questa è una lista non ordinata:</p>
+            <ul id="myList">
+                <li>Elemento 1</li>
+                <li>Elemento 2</li>
+                <li>Elemento 3</li>
+            </ul>
+        </div>
+    </div>
     <script src="D10.js"></script>
 </body>
+
 </html>
